<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 쪽지 -->

    <ImageButton
        android:id="@+id/BtnNotify"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/main_button_1_desc"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:background="@drawable/menu1_1" />

    <!-- 1:1 상담 -->
    <ImageButton
        android:id="@+id/BtnHomereport"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/main_button_2_desc"  
        android:scaleType="fitXY"              
        android:background="@drawable/menu1_2" />

    <!-- 원아 알림창 -->
    <ImageButton
        android:id="@+id/BtnMsg"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="35dp"        
        android:contentDescription="@string/main_button_3_desc"
                android:scaleType="fitXY"
        android:background="@drawable/menu1_3" />

    
    
    
    
    <!--  두번째 줄..  -->
    
    <!-- 출결관리 -->
    <ImageButton
        android:id="@+id/BtnMedicine"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="115dp"        
        android:contentDescription="@string/main_button_4_desc"
                android:scaleType="fitXY"
        android:background="@drawable/menu1_4" />
    
    <!-- 가정통신문 -->
    <ImageButton
        android:id="@+id/BtnAttendance"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="115dp"
        android:contentDescription="@string/main_button_5_desc"    
                android:scaleType="fitXY"    
        android:background="@drawable/menu1_5" />
    
    <!-- 참가신청현황 -->
    <ImageButton
        android:id="@+id/BtnApplyGoHome"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="115dp"
        android:contentDescription="@string/main_button_6_desc"    
                android:scaleType="fitXY"    
        android:background="@drawable/menu1_6" />

    	
    <!--  세번째 줄..  -->
    
    <!-- 투약의뢰서 -->
    <ImageButton
        android:id="@+id/BtnMantoman"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="195dp"        
        android:contentDescription="@string/main_button_7_desc"
                android:scaleType="fitXY"
        android:background="@drawable/menu1_7" />

    <!-- 우리 반 앨범 -->
    <ImageButton
        android:id="@+id/BtnClassAlbum"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="195dp"        
        android:contentDescription="@string/main_button_8_desc"
                android:scaleType="fitXY"
        android:background="@drawable/menu1_8" />
    
    <!-- 우리 반 이야기 -->
    <ImageButton
        android:id="@+id/BtnClassStory"
        android:layout_width="65dp"
        android:layout_height="76dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="195dp"        
        android:contentDescription="@string/main_button_8_desc"
        android:scaleType="fitXY"
        android:background="@drawable/menu1_9" />



</RelativeLayout>
    
    